--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   }
 }
